--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll Number</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Abhiral</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Mandeep</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>prerna</td>
+			</tr>
+		</tbody>
+	</table>
+	List of medias
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="picc">
+		</li>
+		<li>
+			<video controls>
+				<Source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/>
+				
+			</video>
+		</li>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
